force-app/main/default/objects/RecreationEvent__c/RecreationEvent__c.object-meta.xml
<CustomObject>
    <label>Recreation Event</label>
    <nameField>
        <label>Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Recreation Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>