force-app/main/default/objects/RecreationEvent__c/fields/AverageRating__c.field-meta.xml
<CustomField>
    <fullName>AverageRating__c</fullName>
    <label>Average Rating</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>