force-app/main/default/objects/RecreationEvent__c/fields/CostPerPerson__c.field-meta.xml
<CustomField>
    <fullName>CostPerPerson__c</fullName>
    <label>Cost per Person</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>