force-app/main/default/objects/RecreationEvent__c/fields/CurrentParticipants__c.field-meta.xml
<CustomField>
    <fullName>CurrentParticipants__c</fullName>
    <label>Current Participants</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>