force-app/main/default/objects/RecreationEvent__c/fields/DurationHours__c.field-meta.xml
<CustomField>
    <fullName>DurationHours__c</fullName>
    <formula>(EndDateTime__c - StartDateTime__c) * 24</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration (Hours)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>