force-app/main/default/objects/RecreationEvent__c/fields/EventCategory__c.field-meta.xml
<CustomField>
    <fullName>EventCategory__c</fullName>
    <label>Event Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Morning</fullName>
            </value>
            <value>
                <fullName>Afternoon</fullName>
            </value>
            <value>
                <fullName>Evening</fullName>
            </value>
            <value>
                <fullName>Full-Day</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>