force-app/main/default/objects/RecreationEvent__c/fields/EventStatus__c.field-meta.xml
<CustomField>
    <fullName>EventStatus__c</fullName>
    <label>Event Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Planned</fullName>
            </value>
            <value>
                <fullName>Open for Registration</fullName>
            </value>
            <value>
                <fullName>Full</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>