force-app/main/default/objects/RecreationEvent__c/fields/FeedbackLink__c.field-meta.xml
<CustomField>
    <fullName>FeedbackLink__c</fullName>
    <label>Feedback Link</label>
    <type>Url</type>
</CustomField>