force-app/main/default/objects/RecreationEvent__c/fields/LocationVenue__c.field-meta.xml
<CustomField>
    <fullName>LocationVenue__c</fullName>
    <label>Location / Venue</label>
    <length>100</length>
    <type>Text</type>
</CustomField>