force-app/main/default/objects/RecreationEvent__c/fields/MaximumParticipants__c.field-meta.xml
<CustomField>
    <fullName>MaximumParticipants__c</fullName>
    <label>Maximum Participants</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>