force-app/main/default/objects/RecreationEvent__c/fields/NotesRemarks__c.field-meta.xml
<CustomField>
    <fullName>NotesRemarks__c</fullName>
    <label>Notes &amp; Remarks</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>