force-app/main/default/objects/RecreationEvent__c/fields/RegistrationDeadline__c.field-meta.xml
<CustomField>
    <fullName>RegistrationDeadline__c</fullName>
    <label>Registration Deadline</label>
    <type>Date</type>
</CustomField>