force-app/main/default/objects/RecreationEvent__c/fields/RequiredEquipment__c.field-meta.xml
<CustomField>
    <fullName>RequiredEquipment__c</fullName>
    <label>Required Equipment</label>
    <type>TextArea</type>
</CustomField>