force-app/main/default/objects/RecreationEvent__c/fields/WeatherDependency__c.field-meta.xml
<CustomField>
    <fullName>WeatherDependency__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Weather Dependency</label>
    <type>Checkbox</type>
</CustomField>