force-app/main/default/objects/RecreationEvent__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>EventCategory__c</columns>
    <columns>EventType__c</columns>
    <columns>EventStatus__c</columns>
    <columns>StartDateTime__c</columns>
    <columns>EndDateTime__c</columns>
    <columns>RegistrationDeadline__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>